<resources>
    <string name="app_name">Список дел</string>
    <string name="add_category">Добавить категорию.</string>
    <string name="edit_category">Редактировать.</string>
    <string name="hint_category_name">Название категории</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Готово</string>
    <string name="delete_all">Удалить все?</string>
    <string name="delete_selected">Удалить выбранное?</string>
    <string name="delete_this_plan">Удалить эту запись?</string>
    <string name="delete">Удалить</string>
    <string name="erase">Стереть</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="button_edit">button_edit</string>
    <string name="save_changes">Сохранить изменения?</string>
    <string name="order_by">Упорядочить</string>
    <string name="by_date">По дате</string>
    <string name="by_alphabet">По алфавиту</string>
    <string name="arrange">Упорядочить</string>
    <string name="add_plan">Добавить план</string>
</resources>
