<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:gravity="center">

    <TextView
        android:id="@+id/creation_plan_date_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/plan_editText_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="Autofill,LabelFor"
        tools:layout_editor_absoluteX="0dp" />

    <!--ImageView
        android:id="@+id/plan_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        tools:ignore="ContentDescription" /-->

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="14"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/plan_button_clear"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/erase"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/plan_button_back"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/plan_button_save"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>